# medievo_language

./: .gitignore  README.md  app_streamlit.py  erros.txt  guia_secoes_especificas.md  manual_de_escrita.md  pyproject.toml  requirements.txt
examples/: minimal_invalid.medi_evo  minimal_valid.medi_evo
grammar/: MedEvo.lark
med_evo/: __init__.py  cli.py  models.py
med_evo/minimal/: __init__.py  compiler.py  dates.py  text.py
med_evo/parser/: grammar.py  lark_parser.py  medievo.lark
med_evo/sections/: __init__.py  balanco_hidrico.py  base.py  controles.py  diagnostico.py  informacoes_paciente.py  medicamentos.py  prismiv.py  registry.py
medi_evo/: __init__.py  api.py  cli.py  models.py  normalization.py
medi_evo/minimal/: __init__.py  compiler.py  dates.py
medi_evo/parser/: grammar.py  lark_parser.py  medi_evo.lark
medi_evo/sections/: __init__.py  balanco_hidrico.py  base.py  controles.py  dated_sections.py  diagnostico.py  free_sections.py  informacoes_paciente.py  medicamentos.py  prismiv.py  registry.py
tests/: test_api.py  test_minimal_grammar.py  test_minimal_semantics.py  test_specific_sections.py
